post.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: post-pod
  namespace: apollo
  labels: {
    app: post-pod
  }
spec: 
  containers: 
  - name: post-pod
    image: joninfante/post:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: apollo
spec:
  ports:
  - targetPort: 80
    port: 5001
  selector:
    app: post-pod
