ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-ingress
  namespace: apollo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # to use regex
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec: 
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service: 
                name: post-service
                port: 
                  number: 5001
